improve migration guide

--- a/6.0.0.md
+++ b/6.0.0.md
@@ -10,19 +10,33 @@ This document only highlights specific changes that require a longer explanation
 
 ## Asynchronous Initialization
 
+The import and initialization syntax has been simplified with more intuitive naming and structure.
+
 Previously, it was possible to mount Parse Server before it was fully started up and ready to receive requests. This could result in undefined behavior, such as Parse Objects could be saved before Cloud Code was registered. To prevent this, Parse Server 6 requires to be started asynchronously before being mounted.
 
 *Parse Server 5:*
 ```js
-const ParseServer = require('parse-server');
+// 1. Import Parse Server
+const { ParseServer } = require('parse-server');
+
+// 2. Create a Parse Server instance as express middleware
 const server = new ParseServer(config);
+
+// 3. Mount express app
 app.use("/parse", server);
 ```
 
 *Parse Server 6:*
 ```js
+// 1. Import Parse Server
 const ParseServer = require('parse-server');
+
+// 2. Create a Parse Server instance
 const server = new ParseServer(config);
-await server.start(); // Starts Parse Server and returns only after it's fully started up
+
+// 3. Start up Parse Server asynchronously
+await server.start();
+
+// 4. Mount express app
 app.use("/parse", server.app);
 ```
