fix migration guide typo

--- a/6.0.0.md
+++ b/6.0.0.md
@@ -37,6 +37,6 @@ const server = new ParseServer(config);
 // 3. Start up Parse Server asynchronously
 await server.start();
 
-// 4. Mount express app
+// 4. Mount express middleware
 app.use("/parse", server.app);
 ```
