migration typo fix

--- a/6.0.0.md
+++ b/6.0.0.md
@@ -22,7 +22,7 @@ const { ParseServer } = require('parse-server');
 // 2. Create a Parse Server instance as express middleware
 const server = new ParseServer(config);
 
-// 3. Mount express app
+// 3. Mount express middleware
 app.use("/parse", server);
 ```
 
