--- a/6.0.0.md
+++ b/6.0.0.md
@@ -14,6 +14,8 @@ The import and initialization syntax has been simplified with more intuitive nam
 
 Previously, it was possible to mount Parse Server before it was fully started up and ready to receive requests. This could result in undefined behavior, such as Parse Objects could be saved before Cloud Code was registered. To prevent this, Parse Server 6 requires to be started asynchronously before being mounted.
 
+`new ParseServer` will always return a Parse Server instance. Previously, depending on where Parse Server was imported from, `new ParseServer` could return an express middleware.
+
 *Parse Server 5:*
 ```js
 // 1. Import Parse Server
