--- a/6.0.0.md
+++ b/6.0.0.md
@@ -31,7 +31,7 @@ app.use("/parse", server);
 *Parse Server 6:*
 ```js
 // 1. Import Parse Server
-const ParseServer = require('parse-server');
+const { ParseServer } = require('parse-server');
 
 // 2. Create a Parse Server instance
 const server = new ParseServer(config);
