add import statement to migration

--- a/6.0.0.md
+++ b/6.0.0.md
@@ -4,17 +4,36 @@ This document only highlights specific changes that require a longer explanation
 
 ---
 
+- [Import Statement](#import-statement)
 - [Asynchronous Initialization](#asynchronous-initialization)
 
 ---
 
-## Asynchronous Initialization
+## Import Statement
 
 The import and initialization syntax has been simplified with more intuitive naming and structure.
 
-Previously, it was possible to mount Parse Server before it was fully started up and ready to receive requests. This could result in undefined behavior, such as Parse Objects could be saved before Cloud Code was registered. To prevent this, Parse Server 6 requires to be started asynchronously before being mounted.
+*Parse Server 5:*
+```js
+// Returns a Parse Server instance
+const ParseServer = require('parse-server');
 
-`new ParseServer` will always return a Parse Server instance. Previously, depending on where Parse Server was imported from, `new ParseServer` could return an express middleware.
+// Returns a Parse Server express middleware
+const { ParseServer } = require('parse-server');
+```
+
+*Parse Server 6:*
+```js
+// Both return a Parse Server instance
+const ParseServer = require('parse-server');
+const { ParseServer } = require('parse-server');
+```
+
+To get the express middleware in Parse Server 6, configure the Parse Server instance, start Parse Server and use its `app` property. See [Asynchronous Initialization](#asynchronous-initialization) for more details.
+
+## Asynchronous Initialization
+
+Previously, it was possible to mount Parse Server before it was fully started up and ready to receive requests. This could result in undefined behavior, such as Parse Objects could be saved before Cloud Code was registered. To prevent this, Parse Server 6 requires to be started asynchronously before being mounted.
 
 *Parse Server 5:*
 ```js
@@ -31,7 +50,7 @@ app.use("/parse", server);
 *Parse Server 6:*
 ```js
 // 1. Import Parse Server
-const { ParseServer } = require('parse-server');
+const ParseServer = require('parse-server');
 
 // 2. Create a Parse Server instance
 const server = new ParseServer(config);
