--- a/6.0.0.md
+++ b/6.0.0.md
@@ -4,13 +4,13 @@ This document only highlights specific changes that require a longer explanation
 
 ---
 
-- [Incompatible git protocol on Node 14](#incompatible-git-protocol-on-node-14)
+- [Incompatible git protocol with Node 14](#incompatible-git-protocol-with-node-14)
 - [Import Statement](#import-statement)
 - [Asynchronous Initialization](#asynchronous-initialization)
 
 ---
 
-## Incompatible git protocol on Node 14
+## Incompatible git protocol with Node 14
 
 Parse Server 6 uses the Node Package Manger (npm) package lock file version 2. While version 2 is supposed to be backwards compatible with version 1, you may still encounter errors due to incompatible git protocols that cannot be interpreted correctly by npm bundled with Node 14.
 
