Add // after with async/await to final example

--- a/3.0.0.md
+++ b/3.0.0.md
@@ -202,6 +202,7 @@ Parse.Cloud.job('downloadImageJob', function(request, status) {
 ```
 
 ```js
+// after with async/await
 Parse.Cloud.job('downloadImageJob', async function(request) {
   const query = new Parse.Query('ImagesToDownload');
   const images = await query.find();
